--- a/Field Tech Time Sheet/FieldTechTimeSheetL.html
+++ b/Field Tech Time Sheet/FieldTechTimeSheetL.html
@@ -40,7 +40,7 @@
 
 		padding-top: 20px;
 
-		margin-bottom: 0.0em;
+		margin-bottom: 0.1em;
 
 		font-size:medium;
 
@@ -48,6 +48,15 @@
 		
 		text-align:center;
 
+	}
+
+	.box {
+    	background-color: lightgrey;
+    	width: 600px;
+    	border-radius: 25px;
+    	padding: 15px;
+    	border: 5px solid navy;
+    	margin: 5px;
 	}
 
 	.rpt-subtitle {
@@ -1061,15 +1070,18 @@
                     </tbody>
                     </table>
                 </div>
-<div class="rpt-title">Servie Journal Report</div>
-	<table>	
-
-    		<tr>
-    			<td style="height:15px;width:110px;float:left;" class="auto-style97">Mileage Total</td>
-    		</tr>
-    		</table>
+<div class="rpt-title">Service Journal Report</div>
+	
 		
-	</div>
+
+
+
+
+<h2></h2>
+<p>The CSS box model is essentially a box that wraps around every HTML element. It consists of: margins, borders, padding, and the actual content.</p>
+<div class="box">TEST TEXT
+
+</div>
 
 </div><script type="text/javascript">(function () {
         return window.SIG_EXT = {};
