--- a/Field Tech Time Sheet/FieldTechTimeSheetL.html
+++ b/Field Tech Time Sheet/FieldTechTimeSheetL.html
@@ -1030,7 +1030,7 @@
                 </div>
 <div class="rpt-title">Service Journal Report</div></br>
 <p><center>The below notes are part of the Field Ticket Report. This Service Journal Report complements the time entries on the page above.</p>
-<div class="box">TEST TEXT
+<div class="box"> {{FX5__Notes__c}}
 
 </div>
 
