--- a/Field Tech Time Sheet/FieldTechTimeSheetM.html
+++ b/Field Tech Time Sheet/FieldTechTimeSheetM.html
@@ -324,7 +324,7 @@
 
 .auto-style98 {
 	border: 1px solid #000000;
-	font-size: xx-small;
+	font-size: 7.5px;
 	justify-content: middle
 }
 .auto-style99 {
